--- a/Putin/Assembly-CSharp-vs.csproj
+++ b/Putin/Assembly-CSharp-vs.csproj
@@ -49,6 +49,7 @@
      <Compile Include="Assets\Script\ArriveTardis.cs" />
      <Compile Include="Assets\Script\BeginScene.cs" />
      <Compile Include="Assets\Script\EndLvl.cs" />
+     <Compile Include="Assets\Script\SmirnoffManagement.cs" />
      <None Include="Assets\Standard Assets\CrossPlatformInput\CrossPlatformInputGuidelines.txt" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
